Revert "introduce port allocator"
This reverts commit 2cf2fd04